# rust-version-info-file

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
fixtures/aki-gsub/: Cargo.toml
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs
tests/: test.rs
