[package]
name = "rust-version-info-file"
version = "0.1.6"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
generating one file includes rustc version and cargo tree
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]

[dev-dependencies]
regex = "1.7"
