[package]
name = "rust-version-info-file"
version = "0.2.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
generating one file includes rustc version and cargo tree
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/aki-akaguma/rust-version-info-file"

[dependencies]

[dev-dependencies]
regex = "1.7"
